Aggiornato il template

--- a/Utils/templates/template.j2
+++ b/Utils/templates/template.j2
@@ -6,21 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/{{ options.basename }}/favicon.ico">
 
-  <title>Album example for Bootstrap</title>
+  <title>Sweleven Documents</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="/dist/bootstrap.min.css" rel="stylesheet">
+  <link href="/{{ options.basename }}/dist/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="album.css" rel="stylesheet">
+  <link href="/{{ options.basename }}/album.css" rel="stylesheet">
 </head>
 
 <body>
 
   <header>
-    <div class="collapse bg-dark" id="navbarHeader">
+    <div class="collapse bg-dark" id="navbarHeader" style="background-color: #{{ options.color }} !important;">
       <div class="container">
         <div class="row">
 
@@ -31,7 +31,7 @@
               <!-- Create link for every branch -->
               {% for branch in options.branches %}
                 <li>
-                  <a href="{{ branch }}/revisionsList.html">{{ branch }}</a>
+                  <a href="{{ branch.path }}">{{ branch.name }}</a>
                 </li>
               {% endfor %}
 
@@ -40,9 +40,9 @@
         </div>
       </div>
     </div>
-    <div class="navbar navbar-dark bg-dark box-shadow">
+    <div class="navbar navbar-dark bg-dark box-shadow" style="background-color: #{{ options.color }} !important;">
       <div class="container d-flex justify-content-between">
-        <a href="#" class="navbar-brand d-flex align-items-center">
+        <a href="" class="navbar-brand d-flex align-items-center">
           <!-- <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg> -->
           <strong>Documents</strong>
         </a>
@@ -58,9 +58,8 @@
 
     <section class="jumbotron text-center">
       <div class="container">
-        <h1 class="jumbotron-heading">Album example</h1>
-        <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator,
-          etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+        <h1 class="jumbotron-heading">{{ options.page.title }}</h1>
+        <p class="lead text-muted">{{ options.page.description }}</p>
       </div>
     </section>
 
@@ -70,14 +69,21 @@
         <div class="row">
 
           <!-- Create a card for every document -->
-          {% for branch in options.branches %}
+          {% for element in options.elements %}
             <div class="col-md-4">
-                <a href="{{ branch }}/revisionsList.html" style="text-decoration: none;">
+                <a href="{{ element.path }}" style="text-decoration: none;">
                     <div class="card mb-4 box-shadow">
-                        <img class="card-img-top"
-                        data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=&lt;{{ branch }}&gt;"
-                        alt="Card image cap">
+                        {% if options.color %}
+                          <img class="card-img-top"
+                          data-src="holder.js/100px225?theme=thumb&bg={{ options.color }}&fg=eceeef&text={{ element.name }}"
+                          alt="Card image cap">
+                        {% else %}
+                            <img class="card-img-top"
+                          data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text={{ element.name }}"
+                          alt="Card image cap">
+                        {% endif %}
                         <div class="card-body">
+                        {# <p class="card-text">{{ element.description }}</p> #}
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                             content. This content is a little bit longer.</p>
                         </div>
@@ -98,10 +104,10 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="/assets/jquery-slim.min.js"><\/script>')</script>
-  <script src="/assets/popper.min.js"></script>
-  <script src="/dist/bootstrap.min.js"></script>
-  <script src="/assets/holder.min.js"></script>
+  <script>window.jQuery || document.write('<script src="/{{ options.basename }}/assets/jquery-slim.min.js"><\/script>')</script>
+  <script src="/{{ options.basename }}/assets/popper.min.js"></script>
+  <script src="/{{ options.basename }}/dist/bootstrap.min.js"></script>
+  <script src="/{{ options.basename }}/assets/holder.min.js"></script>
 </body>
 
 </html>
